# uuv_simulation_evaluation

./: .gitignore  .travis.yml  3rd-party-licenses.txt  README.md  requirements.txt
.ci_config/: ros_kinetic.sh  uuv_dependencies.sh
.uuv_ci_config/: ros_lunar.sh  run_tests.sh  uuv_dependencies.sh
uuv_evaluation_examples/uuv_batch_run_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_evaluation_examples/uuv_batch_run_example/config/: example_grid_search.yml  example_monte_carlo.yml  example_samples.yml  task.yml
uuv_evaluation_examples/uuv_batch_run_example/launch/: start_task.launch
uuv_evaluation_examples/uuv_batch_run_example/scripts/: run_grid_search  run_monte_carlo  run_samples
uuv_evaluation_examples/uuv_simulation_runner_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_evaluation_examples/uuv_simulation_runner_example/config/: task.yml
uuv_evaluation_examples/uuv_simulation_runner_example/launch/: start_simulation.launch
uuv_evaluation_examples/uuv_simulation_runner_example/scripts/: run_grid_search
uuv_evaluation_examples/uuv_simulation_timer_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_evaluation_examples/uuv_simulation_timer_example/launch/: start_timer_example.launch
uuv_evaluation_examples/uuv_smac_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
uuv_evaluation_examples/uuv_smac_example/launch/: start_smac_task.launch
uuv_evaluation_examples/uuv_smac_example/scripts/: evaluate_results  run_smac_opt
uuv_evaluation_examples/uuv_smac_example/smac_config/: opt_config.yml  parameter_config.pcs  task.yml
uuv_simulation_evaluation/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_simulation_evaluation/scripts/: evaluate_bag  generate_motion_primitives  print_kpi_tags  run_best_worst_comparison
uuv_simulation_evaluation/src/uuv_bag_evaluation/: __init__.py  error.py  evaluation.py  recording.py
uuv_simulation_evaluation/src/uuv_bag_evaluation/data_parsers/: __init__.py  auv_command_data.py  concentration_sensor_data.py  current_velocity_data.py  error_data.py  fins_data.py  salinity_data.py  simulation_data.py  thruster_data.py  thruster_manager_data.py  trajectory_data.py  wrench_perturbation_data.py
uuv_simulation_evaluation/src/uuv_bag_evaluation/metrics/: __init__.py  euclidean_error.py  kpi.py  max_abs_thrust.py  max_error.py  mean_abs_error.py  mean_abs_thrust.py  median_absolute_deviation.py  peak_to_peak.py  rsd.py
uuv_simulation_evaluation/src/uuv_cost_function/: __init__.py  constraint.py  cost_function.py
uuv_simulation_evaluation/test/: test_all.launch  test_constraint.py  test_cost_function.py  test_evaluate_trajectory.py  test_kpis.py
uuv_simulation_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_simulation_wrapper/launch/: set_simulation_timer.launch  unpause_simulation.launch
uuv_simulation_wrapper/scripts/: run_batch  set_simulation_timer  unpause_simulation
uuv_simulation_wrapper/src/uuv_simulation_runner/: simulation_runner.py
uuv_simulation_wrapper/test/: example_start_ocean_world.launch  example_start_ocean_world.yaml  test_all.launch  test_run_task.py
uuv_smac_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
uuv_smac_utils/scripts/: create_results_folder  create_smac_config_files  evaluate_smac_best_results  generate_motion_primitives  run_smac  smac_wrapper  sync_smac_files
uuv_smac_utils/src/uuv_smac_utils/: __init__.py  opt_configuration.py  simulation_pool.py  utils.py
