<?xml version="1.0"?>
<package>
  <name>uuv_simulation_evaluation</name>
  <version>0.5.0</version>
  <description>Package containing Python libraries for ROS bag evaluation and cost function computation</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-matplotlib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-yaml</run_depend>
  <run_depend>uuv_trajectory_control</run_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
