<?xml version="1.0"?>
<package format="2">
  <name>uuv_simulation_evaluation</name>
  <version>0.5.0</version>
  <description>Package containing Python libraries for ROS bag evaluation and cost function computation</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>python-numpy</depend>
  <depend>python-matplotlib</depend>
  <depend>tf</depend>
  <depend>python-yaml</depend>
  <depend>uuv_trajectory_control</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

</package>
