<?xml version="1.0"?>
<package format="2">
  <name>uuv_simulation_wrapper</name>
  <version>0.5.0</version>
  <description>A wrapper function to run a Gazebo simulation scenario from Python applications</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-yaml</depend>
  <depend>python-psutil</depend>

  <test_depend>rosunit</test_depend>
</package>
