<?xml version="1.0"?>
<package format="2">
  <name>uuv_smac_utils</name>
  <version>0.5.0</version>
  <description>Utility scripts and configuration for the SMAC optimization</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <author email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>uuv_simulation_evaluation</depend>
  <depend>uuv_simulation_wrapper</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>python-yaml</depend>
  <depend>python-matplotlib</depend>
  <depend>python-simplejson</depend>
  <depend>python-numpy</depend>

</package>
