<?xml version="1.0"?>
<package format="2">
  <name>uuv_smac_example</name>
  <version>0.5.0</version>
  <description>The uuv_batch_run_example package</description>

  <maintainer email="musa.marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  </package>
